# estrutura-ws-101

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  steps.md
.github/workflows/: ci.yml
data/output/: consolidado.xlsx
docs/: functions.md  index.md  steps.md
functions/: index.html
search/: search_index.json
src/: main.py
src/ETL/: __init__.py  extract.py  load.py  pipeline.py  transform.py
src/pipeline/: extract.py  load.py  transform.py
src/utils/: main.py
steps/: index.html
stylesheets/: extra.css
tests/: __init__.py  test_integration.py  test_pipeline.py  test_unitarios.py
